# cranberry

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: main.yaml  python-lint.yaml  python-lint.yml  python-tests.yaml  rust-lint.yaml  rust.yaml  test-github-actions.yml  tests.yaml  tests.yml
cranberry/: __init__.py  cranberry.pyi  nn.py  ops.py  optim.py  shape.py  storage.pyi  tensor.py  view.py
cranberry/features/: datasets.py  visualize.py
cranberry/nn/: __init__.py  optim.py
cranberry/optim/: __init__.py
cranberry/storage/src/: lib.rs
docs/: dev-guide.md  tensor-structure.md
examples/: demo.ipynb  demo_pytorch.ipynb  demo_torch.ipynb  gpt2.py  mnist.py
extra/: gemm.py  playground.py  speed_add.py  speed_gemm.py  speed_mul.py
src/: core.rs  cpu_backend.rs  data.rs  device.rs  lib.rs  ops.rs  optim.rs  storage.rs  storage_ptr.rs  tensor.rs  tensor_old.rs  view
src/backend/: cpu.rs  cuda.rs  kernels_simd.rs  mod.rs  registry.rs
src/core/: mod.rs  reduce.rs  storage.rs  view.rs
src/ops/: cpu_backend.rs
src/py/: mod.rs
src/storage/: cpu_backend.rs  mod.rs  tests.rs
src/storage_ptr/: mod.rs  test.rs  tests.rs
src/tests/: backend.rs  device.rs  mod.rs  reduce.rs  view.rs
storage/: Cargo.toml
storage/src/: cpu_backend.rs  lib.rs
test/: test_tensor.py
tests/: test_storage_ptr.py  test_storageview.py  test_tensor.py
