[package]
name = "cranberry"
version = "0.1.2"
edition = "2021"

[lib]
name = "cranberry"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.22.2", features = ["extension-module"] }
rand = { version = "0.8.5" }

[features]
abi3 = ["pyo3/abi3-py37", "generate-import-lib"]
generate-import-lib = ["pyo3/generate-import-lib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
