[package]
name = "cranberry"
version = "0.1.3"
edition = "2021"

[lib]
name = "cranberry"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
rand = { version = "0.8.5" }
rand_distr = "0.4"
thiserror = "1"
cudarc = { version = "0.17", features = ["driver", "nvrtc", "cuda-version-from-build-system"] }
once_cell = "1.19"

[features]
default = ["python"]
python = []
abi3 = ["pyo3/abi3-py37", "generate-import-lib"]
generate-import-lib = ["pyo3/generate-import-lib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
