[project]
name = "cranberry"
version = "0.1.3"
description = ""
readme = "README.md"
authors = [ {name = "Wookyung Jeong", email = "77jwk0724@gmail.com"} ]
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=2.0,<3.0",
    "graphviz>=0.20.3,<0.21.0",
    "psutil>=6.0.0,<7.0.0",
    "tqdm>=4.66.4,<5.0.0",
]


[project.optional-dependencies]
dev = [
    "pyright>=1.1.372,<2.0.0",
    "ruff>=0.5.4,<0.6.0",
    "pytest>=8.3.1,<9.0.0",
    "torch>=2.3.1,<3.0.0",
    "maturin>=1.7.1,<2.0.0",
]

[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

