[project]
name = "cranberry"
version = "0.1.3"
description = ""
authors = [{ name = "Wookyung Jeong", email = "77jwk0724@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy~=2.0",
    "graphviz>=0.20.3,<0.21",
    "psutil>=6.0.0,<7",
    "tqdm>=4.66.4,<5",
]

[dependency-groups]
dev = [
    "pyright>=1.1.372,<2",
    "ruff>=0.5.4,<0.6",
    "pytest>=8.3.1,<9",
    "torch>=2.3.1,<3",
    "maturin>=1.7.1,<2",
    "matplotlib>=3.10.6",
    "scikit-learn>=1.7.2",
]

[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"
